--- a/nnpcai-website-redesign/package.json
+++ b/nnpcai-website-redesign/package.json
@@ -12,6 +12,7 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^9.0.4",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-navigation-menu": "^1.2.14",
